# pxr-tf

./: .gitignore  CMakeLists.txt  LICENSE.txt  NOTICE.txt  README.md
.github/actions/building-deps/: action.yml
.github/workflows/: linux.yml  macos.yml  windows.yml
cmake/: pxr-tf-config.cmake.in
src/: CMakeLists.txt
src/pxr/tf/: anyUniquePtr.cpp  anyUniquePtr.h  anyWeakPtr.cpp  anyWeakPtr.h  api.h  atomicOfstreamWrapper.cpp  atomicOfstreamWrapper.h  atomicRenameUtil.cpp  atomicRenameUtil.h  bigRWMutex.cpp  bigRWMutex.h  bitUtils.cpp  bitUtils.h  callContext.h  cxxCast.h  debug.cpp  debug.h  debugCodes.cpp  debugCodes.h  debugNotice.cpp  debugNotice.h  declarePtrs.h  delegatedCountPtr.h  denseHashMap.cpp  denseHashMap.h  denseHashSet.cpp  denseHashSet.h  diagnostic.cpp  diagnostic.h  diagnosticBase.cpp  diagnosticBase.h  diagnosticHelper.cpp  diagnosticHelper.h  diagnosticLite.h  diagnosticMgr.cpp  diagnosticMgr.h  diagnosticOverview.dox  dl.cpp  dl.h  enum.cpp  (+233 more)
src/pxr/tf/pxrCLI11/: CLI11.h  pxr-CLI11.patch
src/pxr/tf/pxrDoubleConversion/: bignum-dtoa.cc  bignum-dtoa.h  bignum.cc  bignum.h  cached-powers.cc  cached-powers.h  diy-fp.cc  diy-fp.h  double-conversion.cc  double-conversion.h  double-to-string.cc  double-to-string.h  fast-dtoa.cc  fast-dtoa.h  fixed-dtoa.cc  fixed-dtoa.h  ieee.h  pxr-double-conversion.patch  string-to-double.cc  string-to-double.h  strtod.cc  strtod.h  utils.h
src/pxr/tf/pxrLZ4/: lz4.cpp  lz4.h
src/pxr/tf/pxrPEGTL/: pegtl.h  pxr-pegtl.patch
src/pxr/tf/pxrTslRobinMap/: robin_growth_policy.h  robin_hash.h  robin_map.h  robin_set.h
src/pxr/tf/testenv/: SIGFPE.cpp  SIGSEGV.cpp  SIGSEGV2.cpp  TestTfDl.cpp  TestTfRegistryFunctionPlugin.cpp  anyUniquePtr.cpp  atomicOfstreamWrapper.cpp  bitUtils.cpp  debug.cpp  delegate.cpp  delegatedCountPtr.cpp  denseHashMap.cpp  dl.cpp  enum.cpp  envSetting.cpp  error.cpp  exception.cpp  fastCompression.cpp  fileUtils.cpp  functionRef.cpp  getenv.cpp  hash.cpp  iterator.cpp  main.cpp  mallocTag.cpp  meta.cpp  notice.cpp  pathUtils.cpp  patternMatcher.cpp  pointerAndBits.cpp  preprocessorUtils.cpp  preprocessorUtilsLite.cpp  probe.cpp  refPtr.cpp  registryManager.cpp  registryManagerUnload.cpp  rwMutexes.cpp  safeOutputFile.cpp  scopeDescription.cpp  scoped.cpp  (+22 more)
src/pxr/tf/unicode/: README.md  tfGenCharacterClasses.py  unicodeCharacterClasses.template.cpp
src/python/: CMakeLists.txt  __init__.py  module.cpp  pyWeakObject.cpp  pyWeakObject.h  wrapAnyWeakPtr.cpp  wrapCallContext.cpp  wrapDebug.cpp  wrapDiagnostic.cpp  wrapDiagnosticBase.cpp  wrapEnum.cpp  wrapEnvSetting.cpp  wrapError.cpp  wrapException.cpp  wrapFileUtils.cpp  wrapFunction.cpp  wrapMallocTag.cpp  wrapNotice.cpp  wrapPathUtils.cpp  wrapPyContainerConversions.cpp  wrapPyModuleNotice.cpp  wrapPyObjWrapper.cpp  wrapPyOptional.cpp  wrapRefPtrTracker.cpp  wrapScopeDescription.cpp  wrapScriptModuleLoader.cpp  wrapSingleton.cpp  wrapStackTrace.cpp  wrapStatus.cpp  wrapStopwatch.cpp  wrapStringUtils.cpp  wrapTemplateString.cpp  wrapTestPyAnnotatedBoolResult.cpp  wrapTestPyContainerConversions.cpp  wrapTestPyStaticTokens.cpp  wrapTestTfPyOptional.cpp  wrapTestTfPython.cpp  wrapToken.cpp  wrapType.cpp  wrapWarning.cpp
test/: CMakeLists.txt  SIGFPE.cpp  SIGSEGV.cpp  SIGSEGV2.cpp  TestTfDl.cpp  TestTfRegistryFunctionPlugin.cpp  anyUniquePtr.cpp  atomicOfstreamWrapper.cpp  bitUtils.cpp  debug.cpp  delegate.cpp  delegatedCountPtr.cpp  denseHashMap.cpp  dl.cpp  enum.cpp  envSetting.cpp  error.cpp  exception.cpp  fastCompression.cpp  fileUtils.cpp  functionRef.cpp  getenv.cpp  hash.cpp  iterator.cpp  main.cpp  mallocTag.cpp  meta.cpp  notice.cpp  pathUtils.cpp  patternMatcher.cpp  pointerAndBits.cpp  preprocessorUtilsLite.cpp  probe.cpp  refPtr.cpp  registryManager.cpp  registryManagerUnload.cpp  rwMutexes.cpp  safeOutputFile.cpp  scopeDescription.cpp  scoped.cpp  (+52 more)
test/TfPyDllLinkTestEnv/testTfPyDllLinkModule/: __init__.py
